Add boilerplate html and begin page content

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<DOCTYPE!html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
+    <title>Excursion: Live YOUR Dream</title>
+  </head>
+  <body>
+    <h1>Discover hidden places in the world around you</h1>
+    <a href="#">Download Excursion (Coming Soon!)</a> <!--Not linked yet!-->
+  </body>
+</html>
