--- a/index.html
+++ b/index.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
+    <meta charset="utf-8">
     <title>Excursion: Live YOUR Dream</title>
   </head>
+
   <body>
     <h1>Discover hidden places in the world around you</h1>
-    <a href="#">Download Excursion (Coming Soon!)</a> <!--Not linked yet!-->
+
+    <div class="download">
+      <a href=".download">Download Excursion (Coming Soon!)</a> <!--Not linked yet!-->
+    </div>
+
+    <video autoplay>
+      <source src="./resources/videos/excursion.mp4" type="video/mp4">
+    </video>
+
+    <div id="about">
+      <h2>Your personal travel guide</h2>
+      <p>Excursion remembers places you like, and recommends new points of interest
+      around you</p>
+    </div>
+
+    <div id="camping">
+      <img src="./resources/images/camp.jpg" alt="Orange Tent Illuminated Under
+      Night Sky">
+    </div>
+
+    <div id="footer">
+      <img src="./resources/images/phone.png" alt="White Phone Outline">
+      <h2>Coming Soon for iPhone and Android</h2>
+    </div>
+
+    <div class="download">
+      <a href=".download">Download Excursion (Coming Soon!)</a> <!--Not linked yet!-->
+    </div>
+
   </body>
+
 </html>
