Add copyright/final touches

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
       <a href=".download">Download Excursion (Coming Soon!)</a> <!--Not linked yet!-->
     </div>
 
+    <div id="copyright">
+      <p>© Excursion</p>
+    </div>
+
   </body>
 
 </html>
